--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
+    "openai": "^4.8.0"
+  }
 }
